fix css for overflow

--- a/src/components/Layout/index.module.scss
+++ b/src/components/Layout/index.module.scss
@@ -5,7 +5,6 @@
   min-height: 100vh;
   max-height: 100vh;
   padding: 2rem 3rem;
-  overflow-y: hidden;
 }
 
 .content {
